# SentinelEdge

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  compose.yaml
build-linux/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sentinel_signal_tests  sentinel_tests  video_sentinel
cmake/: gdbinit.in
cmake/toolchains/: aarch64-linux-gnu.cmake
config/: cameras.example.yaml  sentinel.example.yaml
config/dev/: cameras.yaml  rules.yaml  sentinel.yaml
config/perf/: pipeline-matrix.conf  sentinel.yaml
config/prod/: cameras.yaml  rules.yaml  sentinel.yaml
data/: README.md
docker/cross-aarch64-ubuntu22.04/: Dockerfile
docs/: dvpp-preprocess.md  image-processing-backend.md  mjpeg-preview.md  project-background.md  project-structure.md  rtsp-output.md  testing-strategy.md  threaded-pipeline-design.md
include/sentinel/analytics/: event_builder.hpp
include/sentinel/app/: linux_signal_fd.hpp  pipeline.hpp
include/sentinel/ascend/: acl_runtime.hpp
include/sentinel/common/: types.hpp
include/sentinel/config/: config_loader.hpp
include/sentinel/image/: dvpp_image_backend.hpp  image_backend.hpp  image_backend_factory.hpp  opencv_image_backend.hpp
include/sentinel/inference/: ascendcl_detector.hpp  detector.hpp  detector_factory.hpp  mock_detector.hpp
include/sentinel/logging/: log_level.hpp  logger.hpp  logger_factory.hpp  stderr_logger.hpp  syslog_logger.hpp
include/sentinel/output/: debug_image_sink.hpp  mjpeg_http_sink.hpp  null_video_sink.hpp  rtsp_video_sink.hpp  video_sink.hpp  video_sink_factory.hpp
include/sentinel/perf/: performance_stats.hpp
include/sentinel/postprocess/: detection_postprocessor.hpp  dvpp_yolo_postprocessor.hpp  opencv_yolo_postprocessor.hpp  postprocessor_factory.hpp
include/sentinel/preprocess/: dvpp_frame_preprocessor.hpp  frame_preprocessor.hpp  opencv_frame_preprocessor.hpp  preprocessor_factory.hpp
include/sentinel/video/: camera_video_source.hpp  mock_video_source.hpp  rtsp_video_source.hpp  video_source.hpp  video_source_factory.hpp
models/: README.md
scripts/: README.md  board-native-build.sh  generate-pipeline-perf-report.py  run-board-dvpp-probe.sh  run-board-mjpeg-preview.sh  run-board-perf-matrix.sh  run-board-pipeline-matrix.sh  run-board-pipeline-perf.sh
src/analytics/: event_builder.cpp
src/app/: linux_signal_fd.cpp  main.cpp  pipeline.cpp
src/ascend/: acl_runtime.cpp  acl_runtime_stub.cpp
src/config/: config_loader.cpp
src/image/: dvpp_image_backend.cpp  image_backend_factory.cpp  opencv_image_backend.cpp  opencv_image_backend_stub.cpp
src/inference/: ascendcl_detector.cpp  ascendcl_detector_stub.cpp  detector_factory.cpp  mock_detector.cpp
src/logging/: logger.cpp  logger_factory.cpp  stderr_logger.cpp  syslog_logger.cpp
src/output/: debug_image_sink.cpp  debug_image_sink_stub.cpp  mjpeg_http_sink.cpp  mjpeg_http_sink_stub.cpp  null_video_sink.cpp  rtsp_video_sink.cpp  video_sink_factory.cpp
src/perf/: performance_stats.cpp
src/postprocess/: dvpp_yolo_postprocessor.cpp  opencv_yolo_postprocessor.cpp  opencv_yolo_postprocessor_stub.cpp  postprocessor_factory.cpp
src/preprocess/: dvpp_frame_preprocessor.cpp  opencv_frame_preprocessor.cpp  opencv_frame_preprocessor_stub.cpp  preprocessor_factory.cpp
src/video/: camera_video_source.cpp  mock_video_source.cpp  rtsp_video_source.cpp  video_source_factory.cpp
tests/fixtures/mock_config/: cameras.yaml  sentinel.yaml
tests/unit/: camera_video_source_test.cpp  detector_factory_test.cpp  image_backend_test.cpp  linux_signal_fd_test.cpp  logger_factory_test.cpp  output_sink_test.cpp  performance_stats_test.cpp  pipeline_smoke_test.cpp  postprocessor_factory_test.cpp  preprocessor_factory_test.cpp
tools/: camera_probe.cpp  dvpp_probe.cpp
